@@ -1,5 +1,9 @@
 2000-11-30  Bernd Schmidt  <bernds@redhat.co.uk>
 
+	2000-07-12  Richard Henderson  <rth@redhat.com>
+	* reload.c (push_secondary_reload): Make sure to add the new
+	reload at the end, after acquiring secondary memory.
+
 	2000-09-14  Alexandre Oliva  <aoliva@redhat.com>, Bernd Schmidt  <bernds@redhat.co.uk>
 	* reload.c (find_reloads_address_1): Generate reloads for auto_inc
 	pseudos that refer to the original pseudos, not only to their
